Removed SVG module from package.

--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "react-native-svg": "^6.3.1",
     "react-native-hgraph": "../"
   },
   "devDependencies": {
